# energia-forecast

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  mlflow.db  pyproject.toml  render.yaml
.github/: deploy_hf.py
.github/workflows/: backtest.yml  backup.yml  ci.yml  deploy-api.yml  deploy-hf.yml  ingest.yml  keepalive.yml  predict.yml
.streamlit/: config.toml
dashboard/: app.py  common.py  requirements.txt
dashboard/views/: forecasts.py  how_it_works.py  performance.py  status.py  tomorrow.py  track_record.py
docs/decisions/: 001-weather-source-open-meteo.md  002-price-granularity.md  003-database-neon.md  004-scheduling-github-actions.md  005-python-env-uv.md  006-omie-parser.md  007-data-sources-token-free.md  008-ren-datahub-source.md  009-energy-charts-source.md  010-openmeteo-previous-runs.md  011-feature-legality-asof.md  012-api-hosting-render.md  013-external-cron-trigger.md  014-live-track-record.md  015-two-zone-dashboard.md
docs/posts/: 2026-07-the-model-was-the-easy-part.md
src/: config.py
src/api/: main.py  schemas.py
src/db/: base.py  engine.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py  0002_ren_realised.py  0003_energy_charts_power.py  (+5 more)
src/db/repositories/: __init__.py  dq_log.py  energy_charts.py  omie.py  openmeteo.py  predictions.py  ren.py
src/features/: asof_repo.py  build_features.py  hourly.py  target.py  temporal.py
src/ingestion/: daily.py  energy_charts_backfill.py  omie_backfill.py  openmeteo_backfill.py  ren_backfill.py
src/ingestion/sources/: energy_charts.py  omie.py  openmeteo.py  ren.py
src/models/: backtest.py  baselines.py  predict.py  price_model.py  run_backtest.py  tracking.py
src/monitoring/: cross_validation.py  watchdog.py
tests/: conftest.py  test_api.py  test_asof_repo.py  test_backtest.py  test_build_features.py  test_cross_validation.py  test_daily_ingest.py  test_energy_charts_fetch.py  test_energy_charts_parser.py  test_energy_charts_repository.py  test_monitoring.py  test_omie_fetch.py  test_omie_parser.py  test_omie_repository.py  test_openmeteo_fetch.py  test_openmeteo_parser.py  test_openmeteo_repository.py  test_predict.py  test_price_features.py  test_price_model.py  test_ren_fetch.py  test_ren_parser.py  test_ren_repository.py  test_smoke.py  test_temporal.py
tests/fixtures/energy_charts/: public_power_es_normal_20240615.json  public_power_es_spring_20260329.json
tests/fixtures/omie/: marginalpdbc_20260329.1  marginalpdbc_20260701.1
tests/fixtures/openmeteo/: previous_runs_3loc_20240615.json
tests/fixtures/ren/: production_breakdown_fall_20241027.json  production_breakdown_normal_20240615.json  production_breakdown_spring_20240331.json
